# supergoodVST

./: BUILDING.md  CMakeLists.txt  MONSTER_GLOWUP_CHANGELOG.md  NEON_UI_ROADMAP.md  README.md
.github/workflows/: windows-build.yml
Presets/: 01 Sub Furnace.obsn  02 Rubber Reactor Reese.obsn  03 Formant Ogre Stab.obsn  04 Metal Maw.obsn  05 Acid Sewer Bass.obsn  06 Triangle Weight.obsn  07 Neuro Bite 16th.obsn  08 Organ Donk.obsn  09 Mirror Cave Reese.obsn  10 Quantized Goblin.obsn  11 Clean Club Sub.obsn  12 FM Teeth Growl.obsn  13 Wide Lunar Reese.obsn  14 Folded Sub Slap.obsn  15 Womp Kraken.obsn  16 Razor Pulse Bass.obsn  17 Dark Formant Reese.obsn  18 Crushed Dungeon.obsn  19 Talking Bass Aye.obsn  20 Zero Gravity Sub.obsn  21 Saw Spine Bass.obsn  22 Phase Tunnel.obsn  23 Neuro Pluck Bass.obsn  24 Acid Ripper Reese.obsn  25 Sub Laser.obsn  26 Glass Monster.obsn  27 Mudline 808 Growl.obsn  28 PWM Cave Womp.obsn  29 Cyber Tuba Bass.obsn  30 Apocalypse Stack.obsn  Liquid Sub Pulse.obsn  Neon Growl Stab.obsn  PHAT Womp Bass.obsn  Rubber Reese.obsn  Wide Monster Lead.obsn
Source/: FXChain.h  Modulation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.h  Wavetable.h
